卖家可修改商品图片

--- a/src/main/resources/templates/user/ShopManage.html
+++ b/src/main/resources/templates/user/ShopManage.html
@@ -273,10 +273,7 @@
                                                     <div class="input-group">
                                                         <div class="custom-file">
                                                             <input type="file" class="custom-file-input" id="imgFile" onchange="check()" accept="image/jpg,image/jpeg,img/png,img/PNG">
-                                                            <label class="custom-file-label" for="imgFile">Choose file</label>
-                                                        </div>
-                                                        <div class="input-group-append">
-                                                            <span class="input-group-text" id="">上传</span>
+                                                            <label class="custom-file-label" for="imgFile">点击上传文件</label>
                                                         </div>
                                                     </div>
                                                 </div>
