完成了支付宝接口

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -414,12 +414,12 @@
                             <th style="width: 20%"class="project-actions text-right">
                                 <a id="paylistid" class="btn btn-warning  btn-sm" href="#" value="" onclick="paylist()">
                                     <img  src="/img/yen-2x.png"><img>
-                                    结算
+                                    全部结算
                                 </a>
                                 <a id="dellistid" class="btn btn-danger btn-sm" href="#" onclick="dellist()">
                                     <i class="fas fa-trash">
                                     </i>
-                                    删除
+                                    全部删除
                                 </a>
                             </th>
                         </tr>
