完成了支付宝接口

--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -841,7 +841,7 @@
     $('#WIDout_trade_no').attr("value",totalnum);
     $('#WIDsubject').attr("value",str);
     document.getElementById("btn").click();
-    window.location.href="/paywithali?totoal="+totalnum+"&addId="+addId;
+    window.location.href="/paywithali?addId="+addId;
   }
 </script>
 </body>
