--- a/src/main/resources/templates/user/userInfomation.html
+++ b/src/main/resources/templates/user/userInfomation.html
@@ -208,7 +208,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label >账号/邮箱</label>
-                                        <input id="emailInput" type="email" class="form-control">
+                                        <input id="emailInput" type="email" class="form-control" onchange="IfExist()">
                                     </div>
                                     <div class="form-group">
                                         <label >用户名</label>
